--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     </div>
     <div class="container">
       <div class="tasks">
-        <p id="p1">9</p>
-        <p id="p2">+</p>
-        <p id="p3">8</p>
+        <p id="number1">9</p>
+        <p id="operation">+</p>
+        <p id="number2">8</p>
       </div>
       <ul class="variants">
-        <li>1</li>
-        <li>1</li>
-        <li>1</li>
-        <li>1</li>
+        <button>1</button>
+        <button>1</button>
+        <button>1</button>
+        <button>1</button>
       </ul>
       <ul class="primers">
         <!-- <li class="item">1</li>
