--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="stopwatch">
-      <h1 class="second">15</h1>
+      <h1 id="timer" class="second">15</h1>
     </div>
     <div class="container">
       <div class="tasks">
@@ -22,14 +22,14 @@
         <p id="operation">+</p>
         <p id="number2">8</p>
       </div>
-      <ul class="variants">
+      <div class="variants">
         <button>1</button>
         <button>1</button>
         <button>1</button>
         <button>1</button>
-      </ul>
-      <ul class="primers">
-        <!-- <li class="item">1</li>
+      </div>
+      <!-- <ul class="primers">
+        <li class="item">1</li>
         <li class="item">2</li>
         <li class="item">3</li>
         <li class="item">4</li>
@@ -38,8 +38,13 @@
         <li class="item">7</li>
         <li class="item">8</li>
         <li class="item">9</li>
-        <li class="item">10</li> -->
-      </ul>
+        <li class="item">10</li>
+        <li class="item">11</li>
+        <li class="item">12</li>
+        <li class="item">13</li>
+        <li class="item">14</li>
+        <li class="item">15</li>
+      </ul> -->
     </div>
   </body>
   <script src="./index.js"></script>
