Quiz counter added

--- a/index.html
+++ b/index.html
@@ -18,15 +18,54 @@
     </div>
     <div class="container">
       <div class="tasks">
-        <p id="number1">9</p>
-        <p id="operation">+</p>
-        <p id="number2">8</p>
+        <h5 id="quiz-count" class="quiz-counter"></h5>
+        <div class="quiz">
+          <p id="number1">9</p>
+          <p id="operation">+</p>
+          <p id="number2">8</p>
+        </div>
+        <div class="btns-box">
+          <button id="prev-question" class="next-prev-btn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="44"
+              height="44"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="#6a11cb"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="ai ai-ArrowLeft"
+            >
+              <path d="M11 5l-7 7 7 7" />
+              <path d="M4 12h16" />
+            </svg>
+          </button>
+          <button id="next-question" class="next-prev-btn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="44"
+              height="44"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="#6a11cb"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="ai ai-ArrowRight"
+            >
+              <path d="M4 12h16" />
+              <path d="M13 5l7 7-7 7" />
+            </svg>
+          </button>
+        </div>
       </div>
       <div class="variants">
-        <button>1</button>
-        <button>1</button>
-        <button>1</button>
-        <button>1</button>
+        <button id="variant">1</button>
+        <button id="variant">1</button>
+        <button id="variant">1</button>
+        <button id="variant">1</button>
       </div>
       <!-- <ul class="primers">
         <li class="item">1</li>
